force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <description>From CreateOAMTRecords apex class - sum of Transaction__c.Transaction_Sum__c for all Transactions where Deposit Date is in the previous month and Transaction Type = Adjustment.</description>
    <label>+ Adjustments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>