force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date for this balance sheet. From CreateOAMTRecords apex class - last day of the month for the month of this report. The month of this report is the month PREVIOUS to the month when the flow is being run, i.e., for a flow run on July 1, 2017 to get June 2017&#39;s totals, this field will show 6/30/2017.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>