force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Deposited_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Receipts__c</fullName>
    <description>From CreateOAMTRecords apex class - sum of Receipt__c.Payment_Amount__c where Status = Deposited or Returned, and Deposit Date is in the previous month.</description>
    <label>+ Deposited Receipts</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>