force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Disbursements__c</fullName>
    <description>From CreateOAMTRecords apex class - sum of Check__c.Amount__c for all Checks where Issue Date is in the previous month and Status = Printed or Cleared.</description>
    <label>- Disbursements</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>