force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance__c</fullName>
    <formula>Prior_Month_Starting_Balance__c +   Deposited_Receipts__c  +  Prior_Month_Voided_and_Canceled_Checks__c  +   Adjustments__c +  Prior_Month_Returned_Receipts__c  - Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>