force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Office_Account__c</fullName>
    <label>Office Account</label>
    <referenceTo>Office_Account__c</referenceTo>
    <relationshipLabel>Office Account Monthly Totals</relationshipLabel>
    <relationshipName>Office_Account_Monthly_Totals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>