force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Prior_Month_Returned_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Returned_Receipts__c</fullName>
    <description>From CreateOAMTRecords apex class - sum of Receipt__c.Payment_Amount__c for all Receipts where Deposit Date is _before_ the previous month, Returned Date _in_ the previous month, and Returned Item = TRUE.</description>
    <label>+ Prior Month Returned Receipts</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>