force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Prior_Month_Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Starting_Balance__c</fullName>
    <description>From CreateOAMTRecords apex class - OAMT.Ending_Balance__c from the previous month&#39;s OAMT record.</description>
    <label>Prior Month Starting Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>