force-app/main/default/objects/Office_Account_Monthly_Totals__c/fields/Prior_Month_Voided_and_Canceled_Checks__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Voided_and_Canceled_Checks__c</fullName>
    <description>From CreateOAMTRecords apex class  - sum of Check__c.Amount__c for all Checks where Issue Date is _before_ the previous month, Status Date is _in_ the previous month, and Status = Voided or Canceled.</description>
    <label>+ Prior Month Voided and Canceled Checks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>